--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f9f9f9" />
     <title>在线工具网</title>
-    <link rel="shortcut icon" href="../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="../assets/images/1.png" />
     <meta name="keywords" content="在线工具网" />
     <meta name="description" content="在线网址导航, 各类开发工具、绘图绘画工具、md5、在线ps、base64、房贷计算器等" />
 
@@ -54,9 +54,8 @@
 <br/>
 <h4 id="联系方式">联系方式</h4>
 <ul>
-<li>微信/Wechat: lengqin1024</li>
-<li>Github: <a href="https://github.com/geeeeeeeek">https://github.com/geeeeeeeek</a></li>
-<li>个人主页: <a href="https://gitapp.cn">https://gitapp.cn</a></li>
+
+<li>官方主页: <a href="https://www.2i8.cn">https://www.2i8.cn</a></li>
 </ul>
 
         </div>
@@ -96,7 +95,7 @@
 
             </div>
             <div class="footer-inner">
-                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：kefu308@gmail.com <br/>© 2021 - 2023 By <a href="https://github.com/geeeeeeeek/web_tool">Web_tool</a> | <a href="http://beian.miit.gov.cn/">京ICP备2023018588号</a><br/></div>
+                <div class="footer-text">本站内容源自互联网，如有内容侵犯了你的权益，请联系删除相关内容，联系邮箱：fk@2i8.cn <br/>© 2021 - 2024 By <a href="https://github.com/geeeeeeeek/web_tool">Web_tool</a> | <a href="http://beian.miit.gov.cn/">京ICP备2023018588号</a><br/></div>
             </div>
         </footer>
     </div>
