--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         内容=“宽度=设备宽度，初始比例=1.0，最小比例=1.0，最大比例=1.0，用户可扩展=否” />
     <元名称=“主题颜色”内容=“#f9f9f9”/>
     < title >在线工具网 - 网址导航</ title >
-    < link rel = “快捷方式图标”   href = "./assets/images/favicon.png"  />
+    < link rel = “快捷方式图标”   href = "./assets/images/1.png"  />
     <元名称=“关键字”内容=“在线工具网”/>
     < meta name = "description"    content = "在线网址大众导航、开发工具、绘图绘画工具、md5、在线ps、base64、房贷计算器等"/ >
 
