--- a/about/index.html
+++ b/about/index.html
@@ -54,7 +54,8 @@
 <br/>
 <h4 id="联系方式">联系方式</h4>
 <ul>
-
+<li>官方主页: <a href="https://www.2i8.cn">https://www.2i8.cn</a></li>
+<li>官方主页: <a href="https://www.2i8.cn">https://www.2i8.cn</a></li>
 <li>官方主页: <a href="https://www.2i8.cn">https://www.2i8.cn</a></li>
 </ul>
 
