--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
                     <div class="logo overflow-hidden">
                         <a href="" class="logo-expanded">
-                            <img src="./assets/images/bt8-expand-light.png" height="40" class="logo-light"
+                            <img src="./assets/images/1.png" height="40" class="logo-light"
                                 alt="在线工具网">
                             <img src="./assets/images/bt8-expand-dark.png" height="40" class="logo-dark d-none"
                                 alt="在线工具网">
@@ -1281,7 +1281,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://cloud.tencent.com/" class="togo text-center text-muted is-views" data-id="689"
+                        <a href="https://curl.qcloud.com/RdBKO4sN/" class="togo text-center text-muted is-views" data-id="689"
                             data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
                             <i class="iconfont icon-goto"></i>
                         </a>
