--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                                     <div class="url-img mr-2 d-flex align-items-center justify-content-center">
 
 
-					    <img class="lazy" src="https://img1.jcloudcs.com/portal/header/jdcloud-logo-2021.svg" data-src="https://img1.jcloudcs.com/portal/header/jdcloud-logo-2021.svg"
+					    <img class="lazy" src="assets/images/logos/jd.jpg" data-src="assets/images/logos/jd.jpg"
                                                 onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="京东云">
 
 
