--- a/index.html
+++ b/index.html
@@ -1326,7 +1326,7 @@
 
 
                         <a href="https://3.cn/1-URvmXn" target="_blank" data-id="" data-url="https://3.cn/1-URvmXn"
-                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="京东云。">
+                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="京东云·云优惠，尽在云惠购。">
 
                             <div class="card-body">
                                 <div class="url-content d-flex align-items-center">
@@ -1342,7 +1342,7 @@
                                         <div class="text-sm overflowClip_1">
                                             <strong>京东云</strong>
                                         </div>
-                                        <p class="overflowClip_1 m-0 text-muted text-xs">京东云。</p>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">京东云·云优惠，尽在云惠购。</p>
                                     </div>
                                 </div>
                             </div>
