--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f9f9f9" />
     <title>在线工具网 - 网址导航</title>
-    <link rel="shortcut icon" href="./assets/images/1.png" />
+    <link rel="shortcut icon" href="./assets/images/2.png" />
     <meta name="keywords" content="在线工具网" />
     <meta name="description" content="在线网址导航, 各类开发工具、绘图绘画工具、md5、在线ps、base64、房贷计算器等" />
 
@@ -1333,7 +1333,7 @@
                                     <div class="url-img mr-2 d-flex align-items-center justify-content-center">
 
 
-					    <img class="lazy" src="assets/images/logos/jd.jpg" data-src="assets/images/logos/jd.jpg"
+					    <img class="lazy" src="assets/images/logos/jd.png" data-src="assets/images/logos/jd.png"
                                                 onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="京东云">
 
 
