--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="theme-color" content="#f9f9f9" />
     <title>在线工具网 - 网址导航</title>
-    <link rel="shortcut icon" href="./assets/images/2.png" />
+    <link rel="shortcut icon" href="./assets/images/1.png" />
     <meta name="keywords" content="在线工具网" />
     <meta name="description" content="在线网址导航, 各类开发工具、绘图绘画工具、md5、在线ps、base64、房贷计算器等" />
 
@@ -52,7 +52,7 @@
 
                     <div class="logo overflow-hidden">
                         <a href="" class="logo-expanded">
-                            <img src="./assets/images/1.png" height="40" class="logo-light"
+                            <img src="./assets/images/2.png" height="40" class="logo-light"
                                 alt="在线工具网">
                             <img src="./assets/images/bt8-expand-dark.png" height="40" class="logo-dark d-none"
                                 alt="在线工具网">
@@ -1292,7 +1292,7 @@
                     <div class="url-body default">
 
 
-                        <a href="https://www.huaweicloud.com/" target="_blank" data-id="" data-url="https://www.huaweicloud.com/"
+                        <a href="https://www.huaweicloud.com/" target="_blank" data-id="" data-url="https://activity.huaweicloud.com/cps.html?fromacct=a9cefde5-2d34-414d-b648-e9057c7d0871&utm_source=V1g3MDY4NTY=&utm_medium=cps&utm_campaign=201905"
                             class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="提供云计算服务&#43;智能，见未来-华为云。">
 
                             <div class="card-body">
@@ -1314,7 +1314,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://www.huaweicloud.com/" class="togo text-center text-muted is-views" data-id="689"
+                        <a href="https://activity.huaweicloud.com/cps.html?fromacct=a9cefde5-2d34-414d-b648-e9057c7d0871&utm_source=V1g3MDY4NTY=&utm_medium=cps&utm_campaign=201905" class="togo text-center text-muted is-views" data-id="689"
                             data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
                             <i class="iconfont icon-goto"></i>
                         </a>
