--- a/index.html
+++ b/index.html
@@ -1226,7 +1226,7 @@
                     <div class="url-body default">
 
 
-                        <a href="https://www.aliyun.com/" target="_blank" data-id="" data-url="https://www.aliyun.com/"
+                        <a href="https://www.aliyun.com/product/ecs?source=5176.11533457&userCode=5ujxggy5" target="_blank" data-id="" data-url="https://www.aliyun.com/"
                             class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="上云就上阿里云。">
 
                             <div class="card-body">
@@ -1248,7 +1248,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://www.aliyun.com/" class="togo text-center text-muted is-views" data-id="689"
+                        <a href="https://www.aliyun.com/product/ecs?source=5176.11533457&userCode=5ujxggy5" class="togo text-center text-muted is-views" data-id="689"
                             data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
                             <i class="iconfont icon-goto"></i>
                         </a>
@@ -1259,7 +1259,7 @@
                     <div class="url-body default">
 
 
-                        <a href="https://cloud.tencent.com/" target="_blank" data-id="" data-url="https://cloud.tencent.com/"
+                        <a href="https://curl.qcloud.com/RdBKO4sN/" target="_blank" data-id="" data-url="https://curl.qcloud.com/RdBKO4sN/"
                             class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="产业智变，云启未来。">
 
                             <div class="card-body">
@@ -1292,7 +1292,7 @@
                     <div class="url-body default">
 
 
-                        <a href="https://www.huaweicloud.com/" target="_blank" data-id="" data-url="https://activity.huaweicloud.com/cps.html?fromacct=a9cefde5-2d34-414d-b648-e9057c7d0871&utm_source=V1g3MDY4NTY=&utm_medium=cps&utm_campaign=201905"
+                        <a href="https://activity.huaweicloud.com/cps.html?fromacct=a9cefde5-2d34-414d-b648-e9057c7d0871&utm_source=V1g3MDY4NTY=&utm_medium=cps&utm_campaign=201905" target="_blank" data-id="" data-url="https://activity.huaweicloud.com/cps.html?fromacct=a9cefde5-2d34-414d-b648-e9057c7d0871&utm_source=V1g3MDY4NTY=&utm_medium=cps&utm_campaign=201905"
                             class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="提供云计算服务&#43;智能，见未来-华为云。">
 
                             <div class="card-body">
