--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                     <li class="sidebar-item">
                                         <a href="#3e90c5117dc0fe9d71410e448d766e52" class="smooth">
                                             <i class="far fa-star fa-lg icon-fw icon-lg mr-2"></i>
-                                            <span>常用工具</span>
+                                            <span>常用网站</span>
                                         </a>
                                     </li>
 
@@ -447,7 +447,7 @@
                         </li>
                         <li><input hidden="" type="radio" name="type"
                                 id="type-whois"
-                                value="https://who.is/whois/"
+                                value="https://whois.chinaz.com/whois/"
                                 data-placeholder="请输入网址(不带 https://)">
                             <label for="type-whois"><span class="text-muted">域名信息查询</span></label>
                         </li>
@@ -585,13 +585,46 @@
             <div class="d-flex flex-fill">
                 <h4 class="text-gray text-lg mb-4">
                     <i class="site-tag iconfont icon-tag icon-lg mr-1" id="3e90c5117dc0fe9d71410e448d766e52"></i>
-                    常用工具
+                    常用网站
                 </h4>
 
             </div>
 
             <div class="row">
 
+                <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
+                    <div class="url-body default">
+
+
+                        <a href="https://www.2i8.cn/" target="_blank" data-id="" data-url="https://www.2i8.cn/"
+                            class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="各种软件游戏资源下载。">
+
+                            <div class="card-body">
+                                <div class="url-content d-flex align-items-center">
+                                    <div class="url-img mr-2 d-flex align-items-center justify-content-center">
+
+
+                                            <img class="lazy" src="assets/images/logos/2.png" data-src="assets/images/logos/2.png"
+                                                onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="源码资游库">
+
+
+                                    </div>
+                                    <div class="url-info flex-fill">
+                                        <div class="text-sm overflowClip_1">
+                                            <strong>源码资游库</strong>
+                                        </div>
+                                        <p class="overflowClip_1 m-0 text-muted text-xs">各种软件游戏资源下载。</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                        <a href="https://www.2i8.cn/" class="togo text-center text-muted is-views" data-id="689"
+                            data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
+                            <i class="iconfont icon-goto"></i>
+                        </a>
+                    </div>
+                </div>
+		    
                 <div class="url-card col-6  col-sm-6 col-md-4 col-xl-5a col-xxl-6a">
                     <div class="url-body default">
 
