--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
                                     <div class="url-img mr-2 d-flex align-items-center justify-content-center">
 
 
-                                            <img class="lazy" src="assets/images/logos/2.png" data-src="assets/images/logos/2.png"
+                                            <img class="lazy" src="assets/images/2.png" data-src="assets/images/2.png"
                                                 onerror="javascript:this.src='assets\/images\/logos\/default.webp'" alt="源码资游库">
 
 
