--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@
                     <div class="url-body default">
 
 
-                        <a href="https://curl.qcloud.com/RdBKO4sN/" target="_blank" data-id="" data-url="https://curl.qcloud.com/RdBKO4sN/"
+                        <a href="https://curl.qcloud.com/ruwCs1PZ" target="_blank" data-id="" data-url="https://curl.qcloud.com/RdBKO4sN/"
                             class="card no-c mb-4" data-toggle="tooltip" data-placement="bottom" data-original-title="产业智变，云启未来。">
 
                             <div class="card-body">
@@ -1313,7 +1313,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="https://curl.qcloud.com/RdBKO4sN/" class="togo text-center text-muted is-views" data-id="689"
+                        <a href="https://curl.qcloud.com/ruwCs1PZ" class="togo text-center text-muted is-views" data-id="689"
                             data-toggle="tooltip" data-placement="right" title="直达" rel="nofollow">
                             <i class="iconfont icon-goto"></i>
                         </a>
